# sprenkler_web_server

./: Cargo.toml  README.md
src/: datamodel.rs  executor.rs  hb.rs  main.rs  paths.rs  valves.rs
src/templates/: index.hbs
static/: index.js  schedule.json  script.js  style.css  timetable.js
static/templates/: details.hbs  index.hbs  timetable.hbs
