[package]
name = "web_server"
version = "0.1.0"
authors = ["Stefan Zabka <zabkaste@informatik.hu-berlin.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
reqwest = { version = "0.10", features = ["json"] }
handlebars = {version="3.2.1", features = ["dir_source"]}
serde = {version="1.0.114", features = ["derive"]}
serde_json = "1.0.56"
url = {version = "2.1.1", features= ["serde"]}
chrono = { version = "0.4", features = ["serde"] }
hyper = "*"
listenfd = "*"
parking_lot = "0.11.0"

