[package]
name = "web_server"
version = "0.1.0"
authors = ["Stefan Zabka <zabkaste@informatik.hu-berlin.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.3.0", features = ["full"] }
warp = "0.3.0"
reqwest = { version = "0.11.2", features = ["json"] }
handlebars = {version="3.5.3", features = ["dir_source"]}
serde = {version="1.0.124", features = ["derive"]}
serde_json = "1.0.64"
url = {version = "2.2.1", features= ["serde"]}
chrono = { version = "0.4.19", features = ["serde"] }
hyper = "*"
listenfd = "*"
parking_lot = "0.11.0"
tracing = "*"
tracing-subscriber = "*"
