[package]
name = "web_server"
version = "0.1.0"
authors = ["Stefan Zabka <zabkaste@informatik.hu-berlin.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.7.1", features = ["full"] }
warp = "0.3.1"
reqwest = { version = "0.11.4", features = ["json"] }
handlebars = {version="4.0.1", features = ["dir_source"]}
serde = {version="1.0.126", features = ["derive"]}
serde_json = "1.0.64"
url = {version = "2.2.2", features= ["serde"]}
chrono = { version = "0.4.19", features = ["serde"] }
hyper = "*"
listenfd = "*"
parking_lot = "0.11.1"
tracing = "*"
tracing-subscriber = "*"
serde_urlencoded = "*"
